add Mac and Intellij IDE ignore file to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -87,3 +87,9 @@ ENV/
 
 # Rope project settings
 .ropeproject
+
+＃ Mac system file ignore
+.DS_Store
+
+# Intellij IDE project setting folder
+.idea
